--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,8 +1,14 @@
 <mat-card class="Task-card">
-    <mat-card-header>
+    <mat-card-header class="task-header">
         <mat-card-title>Add a Task</mat-card-title> 
     </mat-card-header>
 
+    <mat-card-content>
+        <mat-form-field class="Task-full-width" appearance="fill">
+            <input matInput placeholder="Title">
+        </mat-form-field>
+    </mat-card-content>
+    
     <mat-card-content>
         <mat-form-field class="Task-full-width" appearance="fill">
           <textarea matInput placeholder="Need to complete...."></textarea>
@@ -10,8 +16,8 @@
     </mat-card-content>
 
   <mat-card-actions>
-    <button mat-button>Add</button>
-    <button mat-button>Reset</button>
+    <button mat-raised-button color="primary">Add</button>
+    <button mat-raised-button color="accent">Reset</button>
   </mat-card-actions>
 
 </mat-card>
