--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,4 +1,5 @@
-<mat-card class="Task-card">
+<div class="Task-main">
+    <mat-card class="Task-card">
     <mat-card-header class="task-header">
         <mat-card-title>Add a Task</mat-card-title> 
     </mat-card-header>
@@ -8,7 +9,7 @@
             <input matInput placeholder="Title">
         </mat-form-field>
     </mat-card-content>
-    
+
     <mat-card-content>
         <mat-form-field class="Task-full-width" appearance="fill">
           <textarea matInput placeholder="Need to complete...."></textarea>
@@ -20,4 +21,5 @@
     <button mat-raised-button color="accent">Reset</button>
   </mat-card-actions>
 
-</mat-card>
+    </mat-card>
+</div>  
